# intake-genius

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  docker-compose.yml  pyproject.toml
docs/: architecture.md  claude-code-build-guide.md  google-calendar-setup.md  mcp-setup.md  n8n-setup.md  security.md  twilio-setup.md
n8n-workflows/: new-intake-ingestion.json  stale-case-followup.json  twilio-reply-handler.json
scripts/: mcp-server.sh  test-e2e.sh
src/: config.py  main.py  mcp_server.py
src/agent/: classifier.py  conflict_checker.py  doc_generator.py  doc_list.py  follow_up.py  orchestrator.py  reply_parser.py  router.py
src/agent/prompts/: classifier.txt  conflict_eval.txt  engagement_letter.txt  follow_up.txt  reply_parser.txt
src/api/: admin.py  intake.py  internal.py  webhooks.py
src/db/: database.py  queries.py  seed.py
src/integrations/: calendar_client.py  task_board.py  twilio_client.py
src/middleware/: auth.py  rate_limit.py  security_headers.py
src/models/: attorney.py  audit.py  case.py
src/static/: admin.html  intake-form.html
src/utils/: pii.py  retry.py
tests/: conftest.py  test_classifier.py  test_conflict_checker.py  test_mcp_server.py  test_orchestrator.py  test_phase4.py  test_webhooks.py
tests/fixtures/: sample_conflicts.json  sample_intakes.json
