[project]
name = "intake-genius"
version = "0.1.0"
description = "Agentic AI legal intake system"
requires-python = ">=3.12"
dependencies = [
    # Core
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "email-validator>=2.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",

    # AI
    "anthropic>=0.40.0",

    # Database
    "aiosqlite>=0.20.0",

    # Integrations
    "twilio>=9.3.0",
    "google-api-python-client>=2.150.0",
    "google-auth-oauthlib>=1.2.0",

    # Fuzzy matching for conflict checker
    "python-Levenshtein>=0.25.0",

    # MCP server
    "fastmcp>=2.0.0",
]

[project.scripts]
intake-genius-mcp = "src.mcp_server:mcp.run"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-httpx>=0.34.0",
    "ruff>=0.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-m 'not integration'"
markers = [
    "integration: tests that call external APIs (run with: pytest -m integration)",
]

[tool.ruff]
line-length = 100
target-version = "py312"
